trying to fix nav bar open button covering buttons

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
     min-width: 60px;
 }
 
-.navBar .navOpenButton {
+.navOpenButton {
     background-color: var(--sticky-color);
     color: var(--button-color);
     display: flex;
@@ -65,23 +65,31 @@ body {
     transition: all 0.5s ease-out;
 }
 
-.navBar .navOpenButton:hover {
+.navOpenButton:hover {
     color: var(--hover-color);
 }
 
-.navBar .navblock {
+.navBlockContainer {
+    position: relative;
+    display: flex;
+    width: 90%;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10%;
+}
+
+.navblock {
     background-color: var(--sticky-color);
     color: var(--text-color-black);
     display: flex;
     position: relative;
-    width: 24%;
     height: 100%;
     justify-content: center;
     align-items: center;
     /* border: 1px solid white; */
     border: none;
     padding: 0;
-    font-size: 150%;
+    font-size: 1.5vw;
     text-decoration: none;
     transition: all 0.5s ease-out;
     z-index: 1;
@@ -93,7 +101,7 @@ body {
     z-index: 1000;
 }
 
-.navBar .navblock:hover {
+.navblock:hover {
     color: var(--hover-color);
 }
 
